# roktrack

./: .gitignore  Cargo.toml  LICENSE  README.md  installation.sh  new.rs
asset/audio/: pronunciation.yaml
asset/audio/ja/: README.md
asset/img/: README.md
asset/model/: animal_classes.txt  digit_classes.txt  pylon_classes.txt
doc/: as_a_simle_surveillance_camera.md  installation.md
hardware/cad/: BLADE_65mm.dxf  BOTTOM_PANEL.dxf  CRAWLER_COVER.dxf  FRONT_PANEL.dxf  MODULE_BOARD.dxf  REAR_PANEL.dxf  SIDE_PANEL.dxf  SPLASH_GUARD.dxf  TOP_PANEL.dxf
hardware/wiring/: Roktrack.fzz
src/: main.rs  module.rs
src/module/: com.rs  define.rs  device.rs  drive.rs  pilot.rs  util.rs  vision.rs
src/module/device/: base.rs  motor.rs  speaker.rs
src/module/pilot/: base.rs  fill.rs  follow_person.rs  monitor_animal.rs  monitor_person.rs  oneway.rs  round_trip.rs
src/module/util/: common.rs  conf.rs  init.rs  path.rs
src/module/vision/: camera.rs  detector.rs
